# democracy_temp

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  package-lock.json  package.json
FrontEnd/skill/: package-lock.json  package.json
FrontEnd/skill/src/: App.tsx  Routes.tsx  index.tsx
FrontEnd/skill/src/components/pages/: Council.tsx  Dashboard.tsx  Employee.tsx  Market.tsx
FrontEnd/skill/src/components/shared/: AccountModal.tsx  Layout.tsx  MarketForm.tsx  Skillform.tsx  form.tsx  header.tsx  sidebar.tsx  utils.ts
FrontEnd/skill/src/contexts/: AccountContext.tsx  AppContext.tsx  CouncilSessionContext.tsx  TaskContext.tsx  types.ts
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs
pallets/market/: Cargo.toml
pallets/market/src/: functions.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/skills/: Cargo.toml
pallets/skills/src/: functions.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/template/: Cargo.toml
pallets/template/src/: functions.rs  lib.rs  types.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  dummy.rs  impls.rs  lib.rs
scripts/: docker_run.sh  process.sh
