[package]
name = "node-template-runtime"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.111", default-features = false, features = ["alloc", "arbitrary_precision"] }
static_assertions = "1.1.0"
log = { version = "0.4.17", default-features = false }

node-primitives = { version = "2.0.0", default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-aura = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-balances = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
frame-support = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0"  }
pallet-grandpa = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-sudo = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
frame-system = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
frame-try-runtime = { default-features = false,git = "https://github.com/paritytech/polkadot-sdk", optional = true ,branch = "release-polkadot-v1.7.0" }
pallet-timestamp = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-transaction-payment = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
frame-executive = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
sp-api = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
sp-block-builder = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
sp-consensus-aura = { default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
sp-consensus-grandpa = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0"}
sp-core = { default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
sp-inherents = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
sp-offchain = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
sp-runtime = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0"  }
sp-session = { default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
sp-std = { default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
sp-transaction-pool = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
sp-version = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0"  }
sp-genesis-builder = { version = "0.7.0",git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0", default-features = false }
pallet-collective = {git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0", default-features = false }
sp-storage = { version = "19.0.0", default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-treasury = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-bounties = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-child-bounties = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-state-trie-migration = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-salary =  {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
frame-election-provider-support = {  default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-assets = {git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0", default-features = false }
pallet-asset-rate = {git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0", default-features = false }
pallet-indices = { version = "28.0.0",git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0", default-features = false }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "26.0.0",git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "28.0.0",git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = {  version = "28.0.0",  default-features = false,git = "https://github.com/paritytech/polkadot-sdk", optional = true ,branch = "release-polkadot-v1.7.0" }
frame-system-benchmarking = {  version = "28.0.0",  default-features = false,git = "https://github.com/paritytech/polkadot-sdk", optional = true ,branch = "release-polkadot-v1.7.0" }

# Local Dependencies
pallet-skills = {  default-features = false, path = "../pallets/skills" }
pallet-market = {  default-features = false, path = "../pallets/market" }

[build-dependencies]
substrate-wasm-builder = {git = "https://github.com/paritytech/polkadot-sdk", optional = true ,branch = "release-polkadot-v1.7.0" }

[features]
default = ["std"]
std = [
	"frame-try-runtime?/std",
	"frame-system-benchmarking?/std",
	"frame-benchmarking?/std",
	"frame-election-provider-support/std",
	"codec/std",
	"scale-info/std",
	"sp-session/std",
	"frame-executive/std",
	"pallet-child-bounties/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-salary/std",
	"pallet-sudo/std",
	"pallet-collective/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-bounties/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-skills/std",
	"pallet-market/std",
	"pallet-assets/std",
	"pallet-asset-rate/std",
	"pallet-indices/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-salary/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-skills/runtime-benchmarks",
	"pallet-market/runtime-benchmarks",
	"pallet-child-bounties/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
]
try-runtime = [
	"frame-try-runtime/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-bounties/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-support/try-runtime",
	"pallet-salary/try-runtime",
	"frame-election-provider-support/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-skills/try-runtime",
	"pallet-market/try-runtime",
	"pallet-child-bounties/try-runtime",
	"pallet-indices/try-runtime",
	
	
]
