[package]
name = "pallet-market"
version = "4.0.0-dev"
description = "job Market place."
authors = ["Kazunobu Ndong"]
homepage = "https://github.com/ndkazu/democracy_temp"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/ndkazu/democracy_temp"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-std = { default-features = false,git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = [
	"derive",
] }
sp-runtime = {default-features = false, git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
frame-benchmarking = {  version = "28.0.0",  default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
frame-support = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
frame-system = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0", default-features = false }
pallet-balances = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-sudo = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-bounties = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-treasury = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-assets = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-asset-rate = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-indices = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
pallet-skills = { default-features = false, path = "../skills"}

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk",branch = "release-polkadot-v1.7.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"pallet-balances/std",
	"pallet-collective/std",
	"pallet-sudo/std",
    "pallet-bounties/std",
	"pallet-skills/std",
	"pallet-treasury/std",
	"pallet-assets/std",
	"pallet-asset-rate/std",
	"pallet-indices/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
